Add 1.8 compatibility